# cmpdl-rs

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
