[package]
name = "cmpdl-rs"
version = "0.1.0"
description = "Tauri-based Curse Modpack Downloader experimentation"
authors = ["Kneelawk <kneelawk@gmail.com>"]
license = "MIT"
repository = "https://github.com/Kneelawk/cmpdl-rs.git"
edition = "2021"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1.0"
async_zip = "0.0.9"
bytes = "1.3"
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
indicatif = "0.17"
log = "0.4"
sanitize-filename = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate", "stream"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
